[Nav Experiment] Use restore completion callback to clear browsing data.

This CL adds a new AddRestoreCompletionCallback APIs to
NavigationManager. Since session restore is asynchronous in slim nav,
this allows callers to registers a completion callback that
NavigationManager will execute when session restore completes.
LegacyNavigationManager always runs the completion handler synchronously.

[MainController -removeBrowsingDataForBrowserState:] is refactored to
wait for session restore completion.

This fixes SigninInteractionControllerTestCase/
testSignInSwitchManagedAccount.

Bug: 890381
Change-Id: Iae660ab054514a9db8d75804a7a8d9599b234d7e
Reviewed-on: https://chromium-review.googlesource.com/c/1331568
Commit-Queue: Danyao Wang <danyao@chromium.org>
Reviewed-by: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607633}
Former-commit-id: 169e31d00bea9e9d7875f2a14bb967634c130da6