ios/web/navigation/wk_based_navigation_manager_impl.h
@@ -11,6 +11,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <memory>
 #include <vector>
 
+#include "base/callback.h"
 #include "base/macros.h"
 #import "ios/web/navigation/navigation_item_impl.h"
 #import "ios/web/navigation/navigation_manager_impl.h"
@@ -135,6 +136,7 @@ class WKBasedNavigationManagerImpl : public NavigationManagerImpl {
   bool CanPruneAllButLastCommittedItem() const override;
   void Restore(int last_committed_item_index,
                std::vector<std::unique_ptr<NavigationItem>> items) override;
+  void AddRestoreCompletionCallback(base::OnceClosure callback) override;
   void LoadIfNecessary() override;
 
  private:
@@ -262,6 +264,11 @@ class WKBasedNavigationManagerImpl : public NavigationManagerImpl {
   // clients of this navigation manager gets sane values for visible title and
   // URL.
   std::unique_ptr<NavigationItem> restored_visible_item_;
+
+  // Non-empty only during the session restoration. The callbacks are
+  // registered in AddRestoreCompletionCallback() and are executed in the first
+  // OnNavigationItemCommitted() callback.
+  std::vector<base::OnceClosure> restore_session_completion_callbacks_;
 
   DISALLOW_COPY_AND_ASSIGN(WKBasedNavigationManagerImpl);
 };
