ios/web/public/navigation_manager.h
@@ -7,6 +7,7 @@
 
 #include <stddef.h>
 
+#include "base/callback.h"
 #include "ios/web/public/browser_url_rewriter.h"
 #include "ios/web/public/navigation_item_list.h"
 #include "ios/web/public/referrer.h"
@@ -193,6 +194,13 @@ class NavigationManager {
   // This takes ownership of |items| (must be moved).
   virtual void Restore(int last_committed_item_index,
                        std::vector<std::unique_ptr<NavigationItem>> items) = 0;
+
+  // Registers a callback to be run when session restoration is completed.
+  // If there is no in-progress session restoration, the callback is run
+  // immediately.
+  // TODO(crbug.com/904502): This API is only needed for clearing cookies.
+  // Remove after //ios/web exposes a proper cookie clearing API.
+  virtual void AddRestoreCompletionCallback(base::OnceClosure callback) = 0;
 
   // Removes all items from this except the last committed item, and inserts
   // copies of all items from |source| at the beginning of the session history.
