ios/web/navigation/navigation_manager_impl_unittest.mm
@@ -9,6 +9,7 @@
 
 #include "base/logging.h"
 #include "base/strings/sys_string_conversions.h"
+#import "base/test/ios/wait_util.h"
 #include "base/test/metrics/histogram_tester.h"
 #include "base/test/scoped_feature_list.h"
 #import "ios/web/navigation/crw_session_controller+private_constructors.h"
@@ -36,6 +37,9 @@
 #if !defined(__has_feature) || !__has_feature(objc_arc)
 #error "This file requires ARC support."
 #endif
+
+using base::test::ios::WaitUntilConditionOrTimeout;
+using base::test::ios::kWaitForPageLoadTimeout;
 
 namespace web {
 namespace {
@@ -1961,30 +1965,53 @@ TEST_P(NavigationManagerTest, TestBackwardForwardItems) {
 
 // Tests that Restore() creates the correct navigation state.
 TEST_P(NavigationManagerTest, Restore) {
-  // Create some NavigationItems and keep a raw pointer to them.
-  std::array<const NavigationItem*, 3> raw_items;
+  GURL urls[3] = {GURL("http://www.url.com/0"), GURL("http://www.url.com/1"),
+                  GURL("http://www.url.com/2")};
   std::vector<std::unique_ptr<NavigationItem>> items;
-  for (size_t index = 0; index < raw_items.size(); ++index) {
+  for (size_t index = 0; index < base::size(urls); ++index) {
     items.push_back(NavigationItem::Create());
-    raw_items[index] = items.back().get();
+    items.back()->SetURL(urls[index]);
   }
 
   // Call Restore() and check that the NavigationItems are in the correct order
   // and that the last committed index is correct too.
   navigation_manager()->Restore(1, std::move(items));
 
+  __block bool restore_done = false;
+  navigation_manager()->AddRestoreCompletionCallback(base::BindOnce(^{
+    restore_done = true;
+  }));
+
   if (GetParam() == TEST_WK_BASED_NAVIGATION_MANAGER) {
-    // TODO(crbug.com/734150): Enable this test once |Restore| is implemented
-    // in WKBasedNavigationManager.
-    return;
+    // Session restore is asynchronous for WKBasedNavigationManager.
+    ASSERT_FALSE(restore_done);
+
+    // Verify that restore session URL is pending.
+    NavigationItem* pending_item = navigation_manager()->GetPendingItem();
+    ASSERT_TRUE(pending_item != nullptr);
+    GURL pending_url = pending_item->GetURL();
+    EXPECT_TRUE(pending_url.SchemeIsFile());
+    EXPECT_EQ("restore_session.html", pending_url.ExtractFileName());
+    EXPECT_EQ("http://www.url.com/0", pending_item->GetVirtualURL());
+
+    // Simulate the end effect of loading the restore session URL in web view.
+    pending_item->SetURL(urls[1]);
+    [mock_wk_list_ setCurrentURL:@"http://www.url.com/1"
+                    backListURLs:@[ @"http://www.url.com/0" ]
+                 forwardListURLs:@[ @"http://www.url.com/2" ]];
+    navigation_manager()->CommitPendingItem();
   }
+
+  ASSERT_TRUE(WaitUntilConditionOrTimeout(kWaitForPageLoadTimeout, ^{
+    return restore_done;
+  }));
 
   ASSERT_EQ(3, navigation_manager()->GetItemCount());
   EXPECT_EQ(1, navigation_manager()->GetLastCommittedItemIndex());
-  EXPECT_EQ(raw_items[1], navigation_manager()->GetLastCommittedItem());
+  EXPECT_EQ(urls[1], navigation_manager()->GetLastCommittedItem()->GetURL());
 
-  for (size_t i = 0; i < raw_items.size(); ++i) {
-    EXPECT_EQ(raw_items[i], navigation_manager()->GetItemAtIndex(i));
+  for (size_t i = 0; i < items.size(); ++i) {
+    EXPECT_EQ(urls[i], navigation_manager()->GetItemAtIndex(i)->GetURL());
   }
 
   histogram_tester_.ExpectTotalCount(kRestoreNavigationItemCount, 1);
